--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "whiteboard-app",
+  "name": "strata",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "start-server": "node build/server/server.js",
+    "start-dev-server": "nodemon server/index.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -12,14 +14,36 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
+    "antd": "^5.5.2",
     "autoprefixer": "10.4.14",
+    "canvas": "^2.11.2",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "express": "^4.18.2",
+    "fabric": "^6.0.0-beta7",
+    "firebase": "^9.22.1",
+    "firebase-admin": "^11.9.0",
+    "framer-motion": "^10.12.16",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
+    "react-toastify": "^9.1.3",
+    "recoil": "^0.7.7",
+    "roughjs": "^4.5.2",
+    "socket.io": "^4.6.2",
+    "socket.io-client": "^4.6.2",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.7",
+    "utf-8-validate": "^5.0.10"
+  },
+  "devDependencies": {
+    "@types/fabric": "^5.3.3",
+    "@types/uuid": "^9.0.1"
   }
 }
